Fixed the page expanding when the highlighting circle went out of bounds

--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@
     top: calc(50% - 75px);
     left: calc(50% - 75px);
     box-shadow: 0px 0px 20px;
+    overflow: hidden;
 }
 
 body {
